--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -200,12 +200,12 @@
 		</div>
 	</div>
 	<!-- End Why Choose Us Section -->
-	<!-- Start Testimonial Slider -->
+	<!-- Start Inspiring Quotes Slider -->
 	<div class="testimonial-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7 mx-auto text-center">
-					<h2 class="section-title">Testimonials</h2>
+					<h2 class="section-title">Inspiring Quotes</h2>
 				</div>
 			</div>
 
@@ -220,100 +220,68 @@
 
 						<div class="testimonial-slider">
 
+							<!-- Quote 1 -->
 							<div class="item">
 								<div class="row justify-content-center">
 									<div class="col-lg-8 mx-auto">
-
 										<div class="testimonial-block text-center">
 											<blockquote class="mb-5">
-												<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
-													odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-													vulputate velit imperdiet dolor tempor tristique. Pellentesque
-													habitant morbi tristique senectus et netus et malesuada fames ac
-													turpis egestas. Integer convallis volutpat dui quis
-													scelerisque.&rdquo;</p>
+												<p>&ldquo;Never give up; just absolutely never give up. &rdquo;</p>
 											</blockquote>
-
 											<div class="author-info">
-												<div class="author-pic">
-													<img src="/assets/person-1.png" alt="Maria Jones" class="img-fluid">
-												</div>
-												<h3 class="font-weight-bold">Maria Jones</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												<h3 class="font-weight-bold">Shane Warne</h3>
+												<span class="position d-block mb-3">Cricket Legend</span>
 											</div>
 										</div>
-
 									</div>
 								</div>
 							</div>
-							<!-- END item -->
 
+							<!-- Quote 2 -->
 							<div class="item">
 								<div class="row justify-content-center">
 									<div class="col-lg-8 mx-auto">
-
 										<div class="testimonial-block text-center">
 											<blockquote class="mb-5">
-												<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
-													odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-													vulputate velit imperdiet dolor tempor tristique. Pellentesque
-													habitant morbi tristique senectus et netus et malesuada fames ac
-													turpis egestas. Integer convallis volutpat dui quis
-													scelerisque.&rdquo;</p>
+												<p>&ldquo;If you don’t believe you’re the best, then you will never
+													achieve all that you are capable of.&rdquo;</p>
 											</blockquote>
-
 											<div class="author-info">
-												<div class="author-pic">
-													<img src="/assets/person_3.jpg" alt="Maria Jones" class="img-fluid">
-												</div>
-												<h3 class="font-weight-bold">Maria Jones</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												<h3 class="font-weight-bold">Cristiano Ronaldo</h3>
+												<span class="position d-block mb-3">Football Player</span>
 											</div>
 										</div>
-
 									</div>
 								</div>
 							</div>
-							<!-- END item -->
 
+							<!-- Quote 3 -->
 							<div class="item">
 								<div class="row justify-content-center">
 									<div class="col-lg-8 mx-auto">
-
 										<div class="testimonial-block text-center">
 											<blockquote class="mb-5">
-												<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
-													odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-													vulputate velit imperdiet dolor tempor tristique. Pellentesque
-													habitant morbi tristique senectus et netus et malesuada fames ac
-													turpis egestas. Integer convallis volutpat dui quis
-													scelerisque.&rdquo;</p>
+												<p>&ldquo;Success is no accident. It is hard work, perseverance,
+													learning, studying, sacrifice and most of all, love of what you are
+													doing.&rdquo;</p>
 											</blockquote>
-
 											<div class="author-info">
-												<div class="author-pic">
-													<img src="/assets/person_4.jpg" alt="Maria Jones" class="img-fluid">
-												</div>
-												<h3 class="font-weight-bold">Maria Jones</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												<h3 class="font-weight-bold">Pelé</h3>
+												<span class="position d-block mb-3">Football Legend</span>
 											</div>
 										</div>
-
 									</div>
 								</div>
 							</div>
-							<!-- END item -->
 
-						</div>
+						</div> <!-- /.testimonial-slider -->
 
-					</div>
+					</div> <!-- /.testimonial-slider-wrap -->
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- End Testimonial Slider -->
-
-
+	<!-- End Inspiring Quotes Slider -->
 	<footer class="footer-section">
 		<div class="container relative">
 
